--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="can_the_person_talk">Can The Person Talk?</string>
     <string name="is_patient_disoriented">Is Patient Disoriented?</string>
     <string name="change_language">Change Language</string>
+    <string name="medical_staff">MEDICAL STAFF</string>
+    <string name="general_citizen">General Citizen</string>
 
 </resources>
